# Vietnamese-Alphabet-Pronunciation-Survey

./: .gitignore  main.py  pyproject.toml
.streamlit/: config.toml
src/: feature_extractor.py  models.py  utils.py
